--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
     display: block;
     overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 .navbar-brand img {
@@ -27,6 +28,42 @@ body {
 
 #KSUlogo {
     max-height: 70px;
+}
+
+
+/* Counter Section */
+
+#CounterSection h1 {
+    text-align: center;
+    font-weight: 700;
+    margin: 100px 0px;
+}
+
+#counterCard {
+    border-color: #801737;
+    text-align: center;
+    font-size: 1.7em;
+    box-shadow: 11px 7px 16px #d8d2d4;
+}
+
+#counterHead {
+    background-color: #801737;
+    color: white;
+}
+
+#counterBody {
+    color: #801737;
+    font-weight: 900;
+}
+
+#signUp {
+    color: white;
+    font-size: 1.7em;
+    font-weight: 500;
+    margin: 5% 0%;
+    width: 25%;
+    margin-right: 37.5%;
+    background-color: #801737;
 }
 
 
