--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,122 @@ body {
     background-color: #801737;
 }
 
+#whatIsIt {
+    position: relative;
+    background-color: black;
+    height: 75vh;
+    min-height: 25rem;
+    width: 100%;
+    overflow: hidden;
+}
+
+#whatIsIt video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 0;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+}
+
+#whatIsIt .container {
+    position: relative;
+    z-index: 2;
+}
+
+#whatIsIt .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
+}
+
+
+/* Field flipping Cards */
+
+#fieldsContainer {
+    transform-style: preserve-3d
+}
+
+#fieldsContainer .box {
+    position: relative;
+    width: 283px;
+    height: 200px;
+    margin: 20px;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    cursor: pointer
+}
+
+#fieldsContainer .box .body {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: 0.9s ease
+}
+
+#fieldsContainer .box .body .imgContainer {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 283px;
+    transform-style: preserve-3d
+}
+
+#fieldsContainer .box .body .imgContainer img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 283px;
+    object-fit: cover
+}
+
+#fieldsContainer .box .body .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12%;
+    background: #333;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    transform: rotateY(180deg)
+}
+
+#fieldsContainer .box:hover .body {
+    transform: rotateY(180deg)
+}
+
+#fieldsContainer .box .body .content div {
+    transform-style: preserve-3d;
+    padding: 20px;
+    width: 283px;
+    height: 180px;
+    border-radius: 12%;
+    background: linear-gradient(45deg, #700018, #d3d0d0);
+    transform: translateZ(100px)
+}
+
+#fieldsContainer .box .body .content div p {
+    margin-top: 15%;
+    text-align: center;
+    font-weight: 500;
+}
+
 
 /* Responsive design  */
 
