--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body {
 /* Field flipping Cards */
 
 #fieldsContainer {
-    transform-style: preserve-3d
+    transform-style: preserve-3d;
 }
 
 #fieldsContainer .box {
@@ -172,7 +172,7 @@ body {
     width: 283px;
     height: 180px;
     border-radius: 12%;
-    background: linear-gradient(45deg, #700018, #d3d0d0);
+    background: linear-gradient(45deg, #e2e2e2, #ffffff);
     transform: translateZ(100px)
 }
 
@@ -180,6 +180,37 @@ body {
     margin-top: 15%;
     text-align: center;
     font-weight: 500;
+    color: #4c122f;
+}
+
+.wave {
+    text-align: center;
+    background: radial-gradient(circle at 10px 15px, white 12px, transparent 13px) left 0 bottom -5px/40px 20px repeat-x, radial-gradient(circle at 10px -5px, transparent 12px, white 13px) left 0 bottom -10px/20px 20px repeat-x, linear-gradient(to bottom, #4c122f, #d63641);
+    padding: 40px 0;
+    position: relative;
+}
+
+.wave::before,
+.wave::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    background-repeat: repeat-x;
+    transform: scaleY(-1);
+}
+
+.wave::before {
+    height: 10px;
+    background-size: 20px 20px;
+    background-image: radial-gradient(circle at 10px -5px, transparent 12px, white 13px);
+}
+
+.wave::after {
+    height: 15px;
+    background-size: 40px 20px;
+    background-image: radial-gradient(circle at 10px 15px, white 12px, transparent 13px);
 }
 
 
