--- a/styles.css
+++ b/styles.css
@@ -214,6 +214,28 @@ body {
 }
 
 
+/* Tracks Cards */
+
+#tracksCards {
+    text-align: center;
+    background-color: #4b030738;
+    border: none;
+    padding: 2%;
+    box-shadow: 0px 5px 11px rgb(175, 173, 173);
+    color: #4c122f;
+    font-weight: 700;
+    font-size: large;
+    width: 46%;
+    height: 30%;
+    margin: 2%;
+}
+
+#tracksCards h5 {
+    font-weight: 700;
+    font-size: x-large;
+}
+
+
 /* Responsive design  */
 
 
