--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,54 @@ body {
 }
 
 
+/* conditions section */
+
+#ConditionContainer {
+    background-color: #4c122f;
+    padding-bottom: 5%;
+}
+
+#ConditionContainer h1 {
+    text-align: center;
+    color: rgb(250, 236, 236);
+    margin-bottom: 5%;
+}
+
+#Condition {
+    text-align: center;
+    background-color: rgba(241, 241, 241, 0.733);
+    box-shadow: 0px 7px 16px rgb(124, 118, 118);
+    color: #4c122f;
+    font-size: 1.75em;
+    font-weight: 500;
+    margin-bottom: 3%;
+}
+
+
+/* Footer */
+
+#footer {
+    background: linear-gradient(to bottom, #4c122f, #d63641);
+}
+
+#footer img {
+    max-height: 100px;
+    margin-left: 2em;
+}
+
+#footer a {
+    text-decoration: none;
+    color: white;
+    font-weight: 500;
+}
+
+#footer a:hover {
+    text-decoration: none;
+    color: #656565;
+    font-weight: 500;
+}
+
+
 /* Responsive design  */
 
 
