--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body {
 
 #counterHead {
     background-color: #801737;
+    font-weight: 500;
     color: white;
 }
 
@@ -64,6 +65,12 @@ body {
     width: 25%;
     margin-right: 37.5%;
     background-color: #801737;
+}
+
+#signUp:hover {
+    color: #801737;
+    border: #801737 solid;
+    background-color: white;
 }
 
 #whatIsIt {
@@ -239,20 +246,21 @@ body {
 /* conditions section */
 
 #ConditionContainer {
-    background-color: #4c122f;
+    background-color: #911838;
+    box-shadow: 0px 0px 40px 60px #911838;
     padding-bottom: 5%;
 }
 
 #ConditionContainer h1 {
     text-align: center;
-    color: rgb(250, 236, 236);
+    color: rgb(255, 255, 255);
     margin-bottom: 5%;
 }
 
 #Condition {
     text-align: center;
-    background-color: rgba(241, 241, 241, 0.733);
-    box-shadow: 0px 7px 16px rgb(124, 118, 118);
+    background-color: rgb(248, 242, 242);
+    box-shadow: 0px 7px 16px rgb(161, 151, 151);
     color: #4c122f;
     font-size: 1.75em;
     font-weight: 500;
@@ -263,6 +271,7 @@ body {
 /* Footer */
 
 #footer {
+    margin-top: 8%;
     background: linear-gradient(to bottom, #4c122f, #d63641);
 }
 
