--- a/styles.css
+++ b/styles.css
@@ -116,6 +116,10 @@ body {
 
 /* Field flipping Cards */
 
+#fieldsh1 {
+    margin-bottom: 3%;
+}
+
 #fieldsContainer {
     transform-style: preserve-3d;
 }
@@ -232,9 +236,10 @@ body {
     color: #4c122f;
     font-weight: 700;
     font-size: large;
-    width: 46%;
+    width: 55%;
     height: 30%;
     margin: 2%;
+    margin-right: 23%;
 }
 
 #tracksCards h5 {
@@ -298,9 +303,53 @@ body {
 
 /* X-Small devices (portrait phones, less than 576px)
 No media query for `xs` since this is the default in Bootstrap
+
 Small devices (landscape phones, 576px and up) */
 
-@media (min-width: 576px) {}
+@media (min-width: 376px) {
+    #KSUlogo {
+        position: absolute;
+        visibility: hidden;
+    }
+    #counterCard {
+        margin-bottom: 10%;
+    }
+    #signUp {
+        color: white;
+        font-size: 1.7em;
+        font-weight: 500;
+        margin: 8% 0%;
+        width: 35%;
+        margin-right: 33%;
+        margin-bottom: 20%;
+        background-color: #801737;
+    }
+    #fieldsh1 {
+        margin-top: 7%;
+        margin-bottom: 7%;
+    }
+    #tracksCards {
+        margin-bottom: 5%;
+    }
+    #ConditionContainer {
+        margin-top: 20%;
+    }
+    #Condition {
+        text-align: right;
+        background-color: rgb(248, 242, 242);
+        box-shadow: 0px 7px 16px rgb(161, 151, 151);
+        color: #4c122f;
+        font-size: 1.2em;
+        font-weight: 500;
+        margin-bottom: 3%;
+        margin-right: 5%;
+        width: 90%;
+    }
+    #footer {
+        margin-top: 20%;
+        background: linear-gradient(to bottom, #4c122f, #d63641);
+    }
+}
 
 
 /* Medium devices (tablets, 768px and up) */
