--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,7 @@ Small devices (landscape phones, 576px and up) */
     #footer a {
         text-decoration: none;
         color: white;
+        margin-right: 2%;
         font-size: 5%;
     }
 }
