--- a/styles.css
+++ b/styles.css
@@ -349,6 +349,7 @@ Small devices (landscape phones, 576px and up) */
         text-decoration: none;
         color: white;
         margin-right: 2%;
+        font-size: 85%;
     }
 }
 
