--- a/styles.css
+++ b/styles.css
@@ -349,7 +349,7 @@ Small devices (landscape phones, 576px and up) */
         text-decoration: none;
         color: white;
         margin-right: 2%;
-        font-size: 85%;
+        font-size: 1.5em;
     }
 }
 
