--- a/styles.css
+++ b/styles.css
@@ -302,17 +302,20 @@ No media query for `xs` since this is the default in Bootstrap
 
 Small devices (landscape phones, 576px and up) */
 
-@media (max-width: 576px) {
+@media (max-width: 600px) {
     #counterCard {
         margin-bottom: 10%;
+        text-align: center;
+        font-size: 0.9em;
+        box-shadow: 11px 7px 16px #d8d2d4;
     }
     #signUp {
         color: white;
         font-size: 1.7em;
         font-weight: 500;
         margin: 8% 0%;
-        width: 35%;
-        margin-right: 33%;
+        width: 50%;
+        margin-right: 25%;
         margin-bottom: 20%;
         background-color: #801737;
     }
