--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
 /* Counter Section */
 
 #CounterSection h1 {
+    color: #96252e;
     text-align: center;
     font-weight: 700;
     margin: 100px 0px;
@@ -38,7 +39,6 @@ body {
 #counterCard {
     border-color: #74564e;
     text-align: center;
-    font-size: 1.7em;
     box-shadow: 11px 7px 16px #d8d2d4;
 }
 
@@ -97,7 +97,7 @@ body {
 
 /* Field flipping Cards */
 
-#fieldsh1 {
+#fields h1 {
     margin-bottom: 3%;
 }
 
@@ -289,7 +289,16 @@ Small devices (landscape phones, 576px and up) */
         margin-bottom: 10%;
         text-align: center;
         font-size: 0.9em;
+        height: 70px;
         box-shadow: 11px 7px 16px #d8d2d4;
+    }
+    #counterHead {
+        font-weight: 500;
+        color: #96252e;
+        height: 30px;
+    }
+    #counterBody {
+        color: #96252e;
     }
     #signUp {
         color: white;
@@ -299,14 +308,32 @@ Small devices (landscape phones, 576px and up) */
         width: 50%;
         margin-right: 25%;
         margin-bottom: 20%;
-        background-color: #801737;
+        background-color: #96252e;
     }
-    #fieldsh1 {
+    #fields h1 {
         margin-top: 7%;
         margin-bottom: 7%;
     }
     #tracksCards {
-        margin-bottom: 5%;
+        margin-bottom: 20%;
+    }
+    #tracksCards {
+        text-align: center;
+        background-color: #4b030738;
+        border: none;
+        padding: 2%;
+        box-shadow: 0px 5px 11px rgb(175, 173, 173);
+        color: #96252e;
+        font-weight: 500;
+        font-size: medium;
+        width: 55%;
+        height: 250px;
+        margin: 2%;
+        margin-right: 23%;
+    }
+    #tracksCards h5 {
+        font-weight: 700;
+        font-size: large;
     }
     #ConditionContainer {
         margin-top: 20%;
@@ -315,15 +342,67 @@ Small devices (landscape phones, 576px and up) */
         text-align: right;
         background-color: rgb(248, 242, 242);
         box-shadow: 0px 7px 16px rgb(161, 151, 151);
-        color: #4c122f;
-        font-size: 1.2em;
-        font-weight: 500;
+        color: #801d25;
+        font-size: 1em;
+        font-weight: 400;
         margin-bottom: 3%;
         margin-right: 5%;
         width: 90%;
     }
     #footer {
         margin-top: 30%;
+    }
+    #partners {
+        margin-top: 10%;
+    }
+    #partners h1 {
+        text-align: center;
+        color: #96252e;
+        font-weight: 700;
+    }
+    #golden {
+        margin: 15% 0%;
+        font-weight: 900;
+        box-shadow: 3px 3px 15px#a8a8a8;
+        border-radius: 5%;
+        color: #801d25;
+        padding: 10% 0%;
+    }
+    #golden h2 {
+        margin-top: 18%;
+        font-weight: 600;
+    }
+    #Tech {
+        margin: 15% 0%;
+        box-shadow: 3px 3px 15px#a8a8a8;
+        border-radius: 5%;
+        color: #801d25;
+        padding: 10% 0%;
+    }
+    #Tech h2 {
+        margin-top: 20%;
+        font-weight: 600;
+    }
+    #consultent {
+        margin: 15% 0%;
+        box-shadow: 3px 3px 15px#a8a8a8;
+        border-radius: 5%;
+        color: #801d25;
+        padding: 10% 0%;
+    }
+    #consultent h2 {
+        margin-top: 30%;
+        font-weight: 600;
+    }
+    #mediaP {
+        margin: 15% 0%;
+        box-shadow: 3px 3px 15px#a8a8a8;
+        border-radius: 5%;
+        color: #801d25;
+    }
+    #mediaP h2 {
+        margin-top: 70%;
+        font-weight: 600;
     }
 }
 
