--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
     margin: 5% 0%;
     width: 25%;
     margin-right: 37.5%;
-    background-color: #96252e;
+    background-color: #6e2339;
 }
 
 #signUp:hover {
@@ -184,7 +184,7 @@ body {
     margin-top: 15%;
     text-align: center;
     font-weight: 500;
-    color: #96252e;
+    color: #911b39;
 }
 
 .wave {
@@ -273,11 +273,6 @@ body {
 
 #footer img {
     max-height: 100px;
-}
-
-#footer a {
-    text-decoration: none;
-    color: white;
 }
 
 #footer a:hover {
@@ -415,7 +410,7 @@ Small devices (landscape phones, 576px and up) */
         width: 50%;
         margin-right: 25%;
         margin-bottom: 20%;
-        background-color: #96252e;
+        background-color: #6e2339;
     }
     #fields h1 {
         margin-top: 7%;
