--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,14 @@ body {
 
 #messenger {
     position: fixed;
-    width: auto;
+    width: 4%;
     z-index: 99;
     bottom: 2%;
-    right: 2%;
+    margin-right: 85%;
 }
 
-#messenger:active {
+#messenger:active,
+#messengerP:active {
     transform: scale(0.9)
 }
 
@@ -459,6 +460,12 @@ Small devices (landscape phones, 576px and up) */
     #footer {
         margin-top: 10%;
     }
+    #footer img {
+        margin-right: -60%;
+    }
+    #footer small {
+        margin-right: -85%;
+    }
     /* partners */
     #partners {
         margin-top: 10%;
@@ -477,7 +484,7 @@ Small devices (landscape phones, 576px and up) */
         padding: 2% 0%;
     }
     #golden h2 {
-        margin-top: 30%;
+        margin-top: 35%;
         margin-right: 1%;
         font-weight: 600;
         font-size: 18px;
@@ -487,7 +494,6 @@ Small devices (landscape phones, 576px and up) */
     #golden img {
         width: 100%;
         margin: 10% 0%;
-        font-weight: 600;
     }
     #Tech {
         margin: 5% 10%;
@@ -497,7 +503,7 @@ Small devices (landscape phones, 576px and up) */
         padding: 2% 0%;
     }
     #Tech h2 {
-        margin-top: 20%;
+        margin-top: 25%;
         margin-right: 1%;
         font-weight: 600;
         text-align: center;
@@ -507,7 +513,6 @@ Small devices (landscape phones, 576px and up) */
     #Tech img {
         width: 60%;
         margin: 7% 15% 7% 0%;
-        font-weight: 600;
     }
     #consultent {
         margin: 5% 10%;
@@ -517,7 +522,7 @@ Small devices (landscape phones, 576px and up) */
         padding: 2% 0%;
     }
     #consultent h2 {
-        margin-top: 20%;
+        margin-top: 47%;
         margin-right: 1%;
         font-weight: 600;
         text-align: center;
@@ -525,9 +530,8 @@ Small devices (landscape phones, 576px and up) */
         max-width: max-content;
     }
     #consultent img {
-        width: 60%;
-        margin: 7% 10% 7% 0%;
-        font-weight: 600;
+        width: 38%;
+        margin: 7% 27% 7% 0%;
     }
     #mediaP {
         margin: 5% 10%;
@@ -536,7 +540,7 @@ Small devices (landscape phones, 576px and up) */
         color: #801d25;
     }
     #mediaP h2 {
-        margin-top: 20%;
+        margin-top: 40%;
         margin-right: 1%;
         font-weight: 600;
         text-align: center;
@@ -546,7 +550,6 @@ Small devices (landscape phones, 576px and up) */
     #mediaP img {
         width: 40%;
         margin: 7% 27% 7% 0%;
-        font-weight: 600;
     }
     #messenger {
         position: fixed;
