--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     width: 4%;
     z-index: 99;
     bottom: 2%;
-    margin-right: 85%;
+    margin-right: 87%;
 }
 
 #messenger:active,
@@ -285,7 +285,12 @@ body {
 }
 
 #footer img {
+    margin-right: -170%;
     max-height: 100px;
+}
+
+#footer small {
+    margin-right: -270%;
 }
 
 
@@ -556,7 +561,7 @@ Small devices (landscape phones, 576px and up) */
         width: 11%;
         z-index: 99;
         bottom: 2%;
-        right: 2%;
+        margin-right: 85%;
     }
     #messenger:active {
         transform: scale(0.9)
